fix: add onclick in arrow card and white space

--- a/src/components/UI/page/JobsPage/JobsPage.module.scss
+++ b/src/components/UI/page/JobsPage/JobsPage.module.scss
@@ -17,7 +17,7 @@
 
     &__jobs-result {
       display: flex;
-      padding: 20px 0;
+      padding: 0 0 20px;
       flex-direction: column;
       align-items: center;
       justify-content: center;
